fix(markdown-table): allow overflow and apply border to only table
## 🧰 Changes
- add `overflow: auto` to `.rdmd-table-inner` to allow large tables
to scroll as per the request in:
https://linear.app/readme-io/issue/CX-179/tables-no-longer-scrolling-horizontally
- remove the `:after` border and replace it with a border applied
directly to the table (also, nests `:first-child` CSS rules under
the new `table` rule)
- sort CSS properties and lints CSS (going to make into separate commit
for easier review)

## 🧬 QA & Testing
- Do long tables with multiple columns that were built with the table
widget now show correctly:
  - stay inside their containing div
  - don't appear to have extra columns
  - don't appear to have a line through the first overflow column
  (see video in https://linear.app/readme-io/issue/CX-179/tables-no-longer-scrolling-horizontally)

--- a/components/Table/style.scss
+++ b/components/Table/style.scss
@@ -54,36 +54,30 @@
       position: relative;
       display: block;
     }
-    &:after {
-      content: ' ';
-      position: absolute;
-      box-shadow: inset 0 0 0 $border-wrap-width var(--table-edges, #dfe2e5);
-      width: 100%;
-      height: 100%;
-      top: 0;
-      pointer-events: none;
-      z-index: 1;
-    }
     &-inner {
+      overflow: auto;
       min-width: 100%;
       box-sizing: content-box;
       width: 100%;
     }
-    table:only-child {
-      margin: 0 !important;
-      thead th {
-        position: sticky;
-        left: 0;
-        z-index: 1;
-        background: inherit;
-      }
-      td:last-child,
-      th:last-child {
-        border-right: none;
-      }
-      thead tr,
-      thead th:last-child {
-        box-shadow: 3px 0 0 var(--table-head);
+    table {
+      border: 1px solid var(--table-edges, #dfe2e5);
+      &:only-child {
+        margin: 0 !important;
+        thead th {
+          position: sticky;
+          left: 0;
+          z-index: 1;
+          background: inherit;
+        }
+        td:last-child,
+        th:last-child {
+          border-right: none;
+        }
+        thead tr,
+        thead th:last-child {
+          box-shadow: 3px 0 0 var(--table-head);
+        }
       }
     }
   }
